--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "anthropic (>=0.84.0,<0.85.0)",
     "langchain (>=1.2.10,<2.0.0)",
     "langchain-anthropic (>=1.3.4,<2.0.0)",
-    "pydantic-settings (>=2.0.0,<3.0.0)"
+    "pydantic-settings (>=2.0.0,<3.0.0)",
+    "pyjwt[crypto] (>=2.8.0,<3.0.0)"
 ]
 
 
